# Rust_Mini_Redis

./: Cargo.toml
idl/: mini-redis.thrift
src/: lib.rs  main
